[package]
name = "capping"
version = "0.1.0"
edition = "2021"
authors =["jez"]
description = "Tool for testing CPU capping latencies"
readme = "README.adoc"
repository = "git@github.com:wrongways/capping"

[dependencies]
async-std = "1.12.0"
chrono = "0.4.24"
clap = { version = "4.2.4", features = ["derive"] }
derive = "1.0.0"
features = "0.10.0"
log = "0.4.17"
simple_logger = "4.1.0"
toml = "0.7.3"
